# carmen

./: Cargo.toml  DOCS.md  putc.c  syscalls.asm
examples/gol/: io.cn  main.cn  syscalls.cn
examples/hello_world/: io.cn  main.cn  syscalls.cn
src/: errors.rs  lexer.rs  main.rs  old_codegen.rs  parser.rs
src/ast/: definitions.rs  expressions.rs  mod.rs  statements.rs
src/cil/: generate.rs  mod.rs  typecheck.rs
src/cil/common/: mod.rs
src/cil/compressed/: mod.rs
src/cil/compressed/compressed_ast/: definitions.rs  mod.rs
src/cil/simplified/: mod.rs
src/cil/typecheck/: mod.rs  runtime.rs  type_id.rs
src/cil/typecheck/constants/: mod.rs
src/cil/typecheck/typechecked_ast/: definitions.rs  mod.rs
src/codegen/: mod.rs
tests/: add.cn  exit.cn  global_ptr.cn  import.cn  print.cn  return.cn  while.cn
