[package]
name = "carmen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "*"
cranelift-frontend = "*"
cranelift-module = "*"
cranelift-object = "*"
rand = "0.8.5"
serde =  { version = "1.0.193", features = ["serde_derive", "derive"] }
serde_json = "1.0.108"
target-lexicon = "*"
